# aspect-typescript

./: BUILD.bazel  README.md  WORKSPACE  package.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: test.yaml
app/: BUILD.bazel  app.ts  app.yaml  main.test.ts  main.ts  tsconfig.json
lib/: BUILD.bazel  tsconfig.json
