load("@npm//:defs.bzl", "npm_link_all_packages")
load("@aspect_rules_ts//ts:defs.bzl", "ts_config")
load("@aspect_rules_js//npm:defs.bzl", "npm_link_package")
load("@aspect_bazel_lib//lib:copy_to_bin.bzl", "copy_to_bin")
load("@io_bazel_rules_k8s//k8s:objects.bzl", "k8s_objects")

package(default_visibility = ["//visibility:public"])

npm_link_package(
    name = "node_modules/@org/lib",
    src = "//lib",
)

ts_config(
    name = "tsconfig",
    src = ":tsconfig.json",
)

copy_to_bin(
    name = "swcrc",
    srcs = [".swcrc"],
)

exports_files(srcs = ["jest.config.js"])

npm_link_all_packages(name = "node_modules")

k8s_objects(
    name = "kubernetes",
    objects = ["//app:kubernetes"],
)
