load("@aspect_rules_ts//ts:defs.bzl", "ts_project")
load("@aspect_rules_js//npm:defs.bzl", "npm_package")
load("@aspect_rules_jest//jest:defs.bzl", "jest_test")

ts_project(
    name = "lib_project",
    srcs = ["index.ts"],
    composite = True,
    declaration = True,
    tsconfig = "//:tsconfig",
)

ts_project(
    name = "lib_project_test",
    srcs = ["index.test.ts"],
    composite = True,
    declaration = True,
    tsconfig = "//:tsconfig",
    deps = [
        ":lib_project",
        "//:node_modules/@types/jest",
    ],
)

jest_test(
    name = "test",
    config = "//:jest.config.js",
    data = [":lib_project_test"],
)

npm_package(
    name = "lib",
    srcs = [":lib_project"],
    package = "@org/lib",
    visibility = ["//visibility:public"],
)
